--- a/src/app/components/image/image.component.html
+++ b/src/app/components/image/image.component.html
@@ -9,7 +9,7 @@
       <p><strong>Size:</strong>{{ image.width }} - {{ image.height }}</p>
       <p><strong>Url:</strong>{{ image.url }}</p>
       <img
-        style="width: 80%; heigth: 80%"
+        style="width: 80%; height: 80%"
         class="rounded"
         src="{{ image.download_url }}"
         alt=""
